objects/SVMXC__Product_Replacement__c.object
<CustomObject>
    <description>Object is used in Advanced Parts Logistics to track product replacements and substitutions. This information is used in Fulfillment engine.</description>
    <fields>
        <fullName>SVMXC__Base_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Base/main product that is being replaced</description>
        <inlineHelpText>Choose the base/main product that is being replaced</inlineHelpText>
        <label>Base Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Replacements/Substitutions</relationshipLabel>
        <relationshipName>Product_Replacements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Order_Of_Preference__c</fullName>
        <description>Order of preference for the replacement product, relative to other products</description>
        <inlineHelpText>Enter the order of preference for the replacement product, relative to other products</inlineHelpText>
        <label>Order Of Preference</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Replacement_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product that replaces the base/main product</description>
        <inlineHelpText>Choose the product that replaces the base/main product</inlineHelpText>
        <label>Replacement Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Other Products Replaced By This Product</relationshipLabel>
        <relationshipName>Product_Replacements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Replacement</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Replacements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>